@@ -1,3 +1,8 @@
+2008-10-28  Mark Ellis <mark@mpellis.org.uk>
+
+	* use CeGetDiskFreeSpaceEx() to obtain space details
+	  for non main storage
+
 2008-10-22  Mark Ellis <mark@mpellis.org.uk>
 
 	* change make-dist files for gvfs-1.0.2
